--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
     <!-- 카카오톡 API를 사용하기 위한 퍼미션 추가 -->
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!--  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>-->
+
+
     <application
         android:name=".KakaoApplication"
         android:allowBackup="true"
@@ -15,6 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Noah"
         tools:targetApi="31">
+
         <activity
             android:name=".SetAddress"
             android:exported="false" />
@@ -54,4 +58,4 @@
             android:value="@string/kakao_app_key" />
     </application>
 
-</manifest>
+    </manifest>
