--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-
+    <!-- 카카오톡 API를 사용하기 위한 퍼미션 추가 -->
+    <uses-permission android:name="android.permission.INTERNET" />
     <!--  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>-->
 
-
     <application
+        android:name=".KakaoApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -18,7 +17,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Noah"
         tools:targetApi="31">
-
+        <activity
+            android:name=".SetAddress"
+            android:exported="false" />
+        <activity
+            android:name=".MyProfile"
+            android:exported="false" />
+        <activity
+            android:name=".login"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -29,6 +36,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+        <activity
+            android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
-    </manifest>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <!-- Redirect URI: "kakao${NATIVE_APP_KEY}://oauth" -->
+                <data
+                    android:host="oauth"
+                    android:scheme="kakao47939324fbf96f947b79074c122ed360" />
+            </intent-filter>
+        </activity> <!-- 카카오톡 API를 사용하기 위한 메타데이터 설정 -->
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="@string/kakao_app_key" />
+    </application>
+</manifest>
