--- a/settings.gradle
+++ b/settings.gradle
@@ -6,11 +6,22 @@ pluginManagement {
     }
 }
 dependencyResolutionManagement {
+/*dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/' }
     }
+}*/
+    dependencyResolutionManagement {
+        repositoriesMode.set(RepositoriesMode.PREFER_PROJECT)
+        repositories {
+            google()
+            mavenCentral()
+            maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/' }
+        }
+    }
+    rootProject.name = "Noah"
+    include ':app'
 }
-rootProject.name = "Noah"
-include ':app'
