--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.Noah"
         tools:targetApi="31">
@@ -28,23 +28,29 @@
         <activity
             android:name=".login"
             android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="Noah">
 
+        <activity
+            android:name=".SplashActivity"
+            android:exported="true"
+            android:theme="@style/SplashTheme"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="Noah">
+        </activity>
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
-
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
@@ -53,7 +59,9 @@
                     android:host="oauth"
                     android:scheme="kakao47939324fbf96f947b79074c122ed360" />
             </intent-filter>
-        </activity> <!-- 카카오톡 API를 사용하기 위한 메타데이터 설정 -->
+        </activity>
+
+        <!-- 카카오톡 API를 사용하기 위한 메타데이터 설정 -->
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="349bfd72de9758c2ea3eca3d73454c59" />
